# telegram_bot_template

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bot.py  docker-compose.yaml  log.py  pyproject.toml  start.sh  watchdog.py
config/: config.py
core/: config.py  watchdog.py
plugins/: start.py
utils/: filters.py  optimized_event_loop.py
