[project]
name = "telegram-bot-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kurigram>=2.2.3",
    "loguru>=0.7.3",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "tgcrypto>=1.2.5",
    "uvloop>=0.22.1 ; sys_platform != 'win32'",
    "winloop>=0.3.1 ; sys_platform == 'win32'",
]
